S3 Object Pinning and OpenAPI type definitions. (#13)
* Adding S3 service, and object service for creating presigned URLs and storing documents.

* Updating readme with configuration, resolving build errors

* Implementing get, getMany, and delete handlers for objects

* Resolving build errors

* Adding openapi type annotations to controlled and DTOs. Updating operation ids.

* Setting default types for links

* Progressing openapi annotations
