# src/link-set/link-set.dto.ts
@@ -1,22 +1,82 @@
+import { ApiProperty } from "@nestjs/swagger";
+import { LinkType } from "@prisma/client";
 import { Type } from "class-transformer";
 import {
   IsArray,
   IsDate,
+  IsEnum,
   IsString,
   Length,
   ValidateNested,
 } from "class-validator";
 
+export class UpsertLinkDto {
+  @ApiProperty({
+    required: true,
+    description: "The relation type of the link.",
+  })
+  @IsString()
+  relationType: string;
+
+  @IsEnum(LinkType)
+  type?: LinkType;
+
+  @ApiProperty({
+    required: true,
+    description: "The href of the link.",
+  })
+  @IsString()
+  href?: string;
+
+  @ApiProperty({
+    required: false,
+    description: "The object key of the link, if TYPE is OBJECT.",
+  })
+  @IsString()
+  objectKey?: string;
+
+  @ApiProperty({
+    required: true,
+    description: "The title of the link.",
+  })
+  @IsString()
+  title: string;
+
+  @ApiProperty({
+    required: false,
+    description: "The language of the link.",
+  })
+  @IsArray()
+  lang?: string[];
+}
+
 export class UpsertLinkSetDto {
+  @ApiProperty({
+    required: false,
+    description: "The ID of the Link Set. This causes an UPDATE, not a CREATE.",
+  })
   @IsString()
   id?: string;
 
+  @ApiProperty({
+    required: true,
+    description: "The identifier of the Link Set.",
+  })
   @IsString()
   identifier: string;
 
+  @ApiProperty({
+    required: true,
+    description: "The qualifier of the Link Set.",
+  })
   @IsString()
   qualifier: string;
 
+  @ApiProperty({
+    required: true,
+    description: "The links of the Link Set.",
+    type: [UpsertLinkDto],
+  })
   @IsArray()
   @Length(1)
   @ValidateNested({ each: true })
@@ -24,59 +84,81 @@ export class UpsertLinkSetDto {
   links: UpsertLinkDto[];
 }
 
-export class UpsertLinkDto {
+export class LinkDto {
   @IsString()
   relationType: string;
 
+  @IsEnum(LinkType)
+  type: LinkType;
+
   @IsString()
-  href: string;
+  href?: string;
+
+  @IsString()
+  objectKey?: string;
 
   @IsString()
   title: string;
 
   @IsArray()
   lang?: string[];
+
+  @IsDate()
+  createdAt: Date;
+
+  @IsDate()
+  updatedAt: Date;
 }
 
 export class LinkSetDto {
+  @ApiProperty({
+    required: false,
+    description: "The ID of the Link Set.",
+  })
   @IsString()
   id?: string;
 
+  @ApiProperty({
+    required: false,
+    description: "The identifier of the Link Set.",
+  })
   @IsString()
   identifier?: string;
 
+  @ApiProperty({
+    required: false,
+    description: "The qualifier of the Link Set.",
+  })
   @IsString()
   qualifier: string;
 
+  @ApiProperty({
+    required: false,
+    description: "The links of the Link Set.",
+    type: [LinkDto],
+  })
   @IsArray()
   @Length(1)
   @ValidateNested({ each: true })
   @Type(() => LinkDto)
   links: LinkDto[];
 
+  @ApiProperty({
+    required: false,
+    description: "The creation date of the Link Set.",
+  })
   @IsDate()
   createdAt: Date;
 
+  @ApiProperty({
+    required: false,
+    description: "The last update date of the Link Set.",
+  })
   @IsDate()
   updatedAt: Date;
 }
 
-export class LinkDto {
-  @IsString()
-  relationType: string;
+// Extending for OpenAPI documentation
+export class LinkSet extends LinkSetDto {}
 
-  @IsString()
-  href: string;
-
-  @IsString()
-  title: string;
-
-  @IsArray()
-  lang?: string[];
-
-  @IsDate()
-  createdAt: Date;
-
-  @IsDate()
-  updatedAt: Date;
-}
+export class Link extends LinkDto {}
